# glad

./: meson.build  meson_options.txt
utility/: generate.sh
